<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:padding="0dp"
    android:theme="@style/AppTheme.NoActionBar"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:layout_constraintHeight_default="spread"
    app:layout_constraintWidth_default="spread"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar

        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="spread"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextColor="#FFFFFF" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:paddingTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
        app:layout_constraintWidth_default="spread">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_vertical|fill_horizontal|center|fill|start|end"
            android:columnCount="2"
            android:orientation="vertical"
            android:requiresFadingEdge="vertical"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="24dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="top|center_horizontal|fill_horizontal|center"
                android:layout_row="0"
                android:gravity="bottom|center_horizontal|center|fill"
                android:paddingTop="5dp"
                android:text="@string/defaultName"
                android:textAlignment="center"
                android:textSize="12sp"
                android:visibility="visible" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:layout_row="1"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:src="@drawable/bread" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:layout_row="2"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:src="@drawable/fruit" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:layout_row="3"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:src="@drawable/veg" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_gravity="top|end"
                android:layout_margin="10dp"
                android:layout_row="4"
                android:contentDescription="@string/image"
                android:scaleType="fitXY"
                android:src="@drawable/soup" />
            <!-- column 2 -->
            <Button
                android:id="@+id/breadsBTN"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_gravity="top|end"
                android:layout_margin="20dp"
                android:layout_row="1"
                android:text="@string/breadTitle" />

            <Button
                android:id="@+id/fruitsBTN"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_gravity="top|end"
                android:layout_margin="20dp"
                android:layout_row="2"

                android:text="@string/fruitTitle" />

            <Button
                android:id="@+id/vegBTN"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_gravity="top|end"
                android:layout_margin="20dp"

                android:layout_row="3"

                android:text="@string/vegTitle" />

            <Button
                android:id="@+id/soupsBTN"
                android:layout_width="110dp"
                android:layout_height="60dp"
                android:layout_column="1"
                android:layout_gravity="top|end"
                android:layout_margin="20dp"

                android:layout_row="4"
                android:text="@string/soupTitle" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>
